2005-06-07  Alex Roitman  <shura@gramps-project.org>
	* src/FamilyView.py (north_american,latin_american,icelandic): Fix
	object/handle mixups.

2005-06-05  Eero Tamminen  <eerot@sf>
	* src/po/fi.po: Translated rest of the tips (=everything).
	  Improved previous translations and fixed typos.

2005-06-05  Alex Roitman  <shura@gramps-project.org>
	* configure.in: Bump up the version number.
	* src/Utils.py (strip_context): Add function.

2005-06-05  Don Allingham  <don@gramps-project.org>
	* src/DateHandler.py: fixed initialization of parser class
	* Release: Version 2.0.3 "Mynd you, møøse bites Kan be pretty
	nasti..." released.

2005-06-05  Alex Roitman  <shura@gramps-project.org>
	* configure.in: Bump up the version number.

2005-06-04  Don Allingham  <don@gramps-project.org>
	* src/DateHandler.py: handle generic "en", "fr" cases as a fallback
	if the unknown "yy_XX" code is passed. Try yy if yy_XX fails.
	* src/dates/Date_*.py: add a default xx case

	* Release: Version 2.0.2 "Little fermented curd will do the trick"
	released.

2005-06-03  Don Allingham  <don@gramps-project.org>
	* src/DateHandler.py: add more English locales
	* src/dates/Date_fi.py: fix estimated/calculated, handle span
	properly
	* src/dates/Makefile.am: remove Date_fi for 2.0.2

2005-06-04  Eero Tamminen  <eerot@sf>
	* src/po/fi.po: Updated translation to 2.0.2 template.pot.
	  Everything except for a few dozen tips is translated.

2005-06-03  Julio Sanchez  <jsanchez@users.sourceforge.net>
	* src/po/es.po: Translation update for version 2.0.2.

2005-06-03  Don Allingham  <don@gramps-project.org>
	* src/EditPerson.py: Don't add empty strings to pdmap
	* src/AutoComp.py: don't add empty strings to completion

2005-06-03  Alexander Roitman  <shura@gramps-project.org>
	* src/Utils.py (bold_label,unbold_label,temp_label): optionally
	set cursor.
	* src/EditSource.py (__init__,on_switch_page): Call
	display_references using idle_add; (display_references): set
	cursor when done.